--- a/fd_backend/package.json
+++ b/fd_backend/package.json
@@ -26,13 +26,19 @@
     "@prisma/client": "^6.11.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "razorpay": "^2.9.6",
     "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
