--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.14.0",
+    "@aws-amplify/react-native": "^1.1.10",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
@@ -17,15 +20,17 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@tanstack/react-query": "^5.82.0",
+    "aws-amplify": "^6.15.4",
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-mmkv": "^3.3.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
