--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@aws-amplify/auth": "^6.14.0",
+    "@aws-amplify/auth": "^6.15.0",
+    "@aws-amplify/core": "^6.13.1",
     "@aws-amplify/react-native": "^1.1.10",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.2",
@@ -20,7 +21,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@tanstack/react-query": "^5.82.0",
-    "aws-amplify": "^6.15.4",
+    "aws-amplify": "^6.15.5",
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
